--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Hadoop-Inline-ClassLoader
 
 {{$NEXT}}
+- Packaging fixes.
+- perl 5.14 is now required.
 
 0.001 2017-02-03 BURAK
-    - Initial release.
+- Initial release.
